# smartcopy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
benches/: copy_benchmark.rs
dashboard/: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Layout.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: Agents.tsx  Compare.tsx  Dashboard.tsx  History.tsx  Jobs.tsx  System.tsx
dashboard/src/services/: api.ts
dashboard/src/utils/: format.ts
deploy/: README.md  install.sh  prometheus.yml
deploy/ansible/: inventory.example.yml  playbook.yml
deploy/ansible/templates/: 99-smartcopy.conf.j2  smartcopy-agent.conf.j2  smartcopy-agent.service.j2  smartcopy-quic.service.j2  smartcopy.env.j2
helm/smartcopy/: Chart.yaml  values.yaml
helm/smartcopy/templates/: _helpers.tpl  configmap.yaml  daemonset.yaml  deployment.yaml  service.yaml
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  history.rs  mod.rs  models.rs  server.rs
src/config/: mod.rs  settings.rs
src/core/: copier.rs  mod.rs  scheduler.rs
src/crypto/: encryption.rs  mod.rs
src/fs/: acl.rs  compress.rs  mod.rs  operations.rs  patricia.rs  scanner.rs  scheduler.rs  sparse.rs  throttle.rs  uring.rs
src/hash/: integrity.rs  mod.rs
src/network/: agent.rs  batch.rs  mod.rs  parallel_sync.rs  quic.rs  ssh.rs  ssh_tuning.rs  tcp.rs  tls.rs
src/progress/: mod.rs  reporter.rs  tui.rs
src/storage/: mod.rs  native_s3.rs  s3.rs  s5cmd.rs
src/sync/: delta.rs  incremental.rs  manifest.rs  mod.rs  parquet_manifest.rs  resume.rs
src/system/: hpc.rs  mod.rs  numa.rs  resources.rs  tuning.rs
