[package]
name = "smartcopy"
version = "0.1.0"
edition = "2021"
authors = ["SmartCopy Team"]
description = "High-performance, intelligent file copy utility for HPC environments"
license = "MIT"
repository = "https://github.com/smartcopy/smartcopy"
keywords = ["copy", "hpc", "parallel", "sync", "performance"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[lib]
name = "smartcopy"
path = "src/lib.rs"

[[bin]]
name = "smartcopy"
path = "src/main.rs"

[dependencies]
# Async runtime for network operations
tokio = { version = "1", features = ["full", "tracing"] }

# Parallelism - work-stealing thread pool
rayon = "1.10"
crossbeam = { version = "0.8", features = ["crossbeam-channel", "crossbeam-deque"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }

# Ultra-fast hashing
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
blake3 = "1"
sha2 = "0.10"

# Progress bars and spinners
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

# Serialization for manifests and config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# SSH/SFTP for remote transfers
ssh2 = "0.9"

# QUIC transport (HTTP/3-like)
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
webpki-roots = "0.26"

# LZ4 compression (ultra-fast)
lz4_flex = "0.11"

# System information
sysinfo = "0.31"
num_cpus = "1.16"

# Memory-mapped I/O
memmap2 = "0.9"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Directory walking
walkdir = "2"
ignore = "0.4"
globset = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Human-readable sizes and durations
humansize = "2"
humantime = "2"

# File time manipulation
filetime = "0.2"

# Hex encoding for hashes
hex = "0.4"

# Encryption (optional)
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
scrypt = { version = "0.11", optional = true }
pbkdf2 = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }

# Hostname detection
hostname = "0.4"

# PEM file parsing
rustls-pemfile = "2"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Rate limiting for bandwidth control
governor = "0.6"

# NUMA support (optional, only for advanced NUMA features)
hwloc2 = { version = "2.2", optional = true }

# High-performance allocator
mimalloc = "0.1"

# Parquet manifest support (optional)
arrow = { version = "55", optional = true }
parquet = { version = "55", optional = true, features = ["zstd"] }

# TAR batch streaming (optional)
tar = { version = "0.4", optional = true }

# Zstd compression for batch TAR (optional)
zstd = { version = "0.13", optional = true }

# Native AWS S3 SDK (optional)
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"], optional = true }

# TUI dashboard (optional)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# CPU affinity (optional)
core_affinity = { version = "0.8", optional = true }

# Platform-specific optimizations
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "net", "process", "socket"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
# io_uring for async I/O on Linux 5.1+
io-uring = "0.7"

[target.'cfg(unix)'.dependencies.xattr]
version = "1.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio-test = "0.4"
proptest = "1"

[[bench]]
name = "copy_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"

[features]
default = ["ssh", "compression"]
ssh = []
compression = []
numa = ["hwloc2", "core_affinity"]
io_uring = []
quic = []
agent = []
encryption = ["aes-gcm", "chacha20poly1305", "argon2", "scrypt", "pbkdf2", "rand"]
parquet_manifest = ["dep:arrow", "dep:parquet"]
batch = ["dep:tar"]
batch_zstd = ["batch", "dep:zstd"]
native_s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types"]
tls_gen = []
tui = ["dep:ratatui", "dep:crossterm"]
